Fix popin scrollbar and remove colors

--- a/static/css/themes/board.css
+++ b/static/css/themes/board.css
@@ -708,7 +708,7 @@ a.card-label:hover {
 }
 
 .cardCounter.limitReached {
-    background: #BD2828;
+    background: #c22e2e;
 }
 /* End card counter */
 
